# 28th-summer-school-hpc

./: README.md
CODE-OPTIMIZATION/: README  code_opt_SE19.tar
CODE-OPTIMIZATION/MD/c/: MD.c  control.c  (+2 more)
Cineca-HPC-systems-Introduction/01_hello/: job.sh
Cineca-HPC-systems-Introduction/02_placing/: README
Exercises/MPI/: job.sh
Exercises/MPI/Example/: CMakeLists.txt  job.sh  main.c  mpi-example.x
Exercises/OpenMP/: CMakeLists.txt
Exercises/OpenMP/src/: omp-dgemm.c  omp-hello-world.c  omp-integral-pi.c  omp-laplace.c  omp-nbody.c
GPU-programming/: README.md  get_gpu
GPU-programming/slides/: .gitignore
MPI/: INDEX.txt
MPI/Esercizio01/: helloworld.c  helloworld.f90
MPI/Esercizio02/: simpledatatype.c  simpledatatype.f90
MPI/Esercizio03/: pigreco.c  pigreco.f90
MPI/Esercizio04/: pigreco_mc.c  pigreco_mc.f90
MPI/Esercizio05/: ring.c  ring.f90
MPI/Esercizio06/: shift.c  shift.f90
MPI/Esercizio07/: shift_v2.c  shift_v2.f90
MPI/Esercizio08/: smoothing_v1.c  smoothing_v1.f90
MPI/Esercizio09/: pigreco_mc_v2.c  pigreco_mc_v2.f90  pigreco_v2.c  pigreco_v2.f90
MPI/Esercizio10/: matrvec.c  matrvec.f90
MPI/Esercizio11/: matrixmatrix.c  matrixmatrix.f90
MPI/Esercizio12/: simplecommtype.c  simplecommtype.f90
MPI/Esercizio13/: shift_v3.c  shift_v3.f90
MPI/Esercizio14/: smoothing_v2.c  smoothing_v2.f90
MPI/Esercizio15/: shift.c  shift.f90
MPI/Esercizio16/: 2daverage.c  2daverage.f90
VECTORIZATION/c/: simple_loop.c  vectorization_cases.c
VECTORIZATION/fortran/: simple_loop.f90  vectorization_cases.f90
src/ml/: PTAnomalyDetection.ipynb
(+118 files in other folders)
